--- a/Latex/main.tex
+++ b/Latex/main.tex
@@ -6,6 +6,7 @@
 \usepackage{hyperref}
 \usepackage[style=authoryear]{biblatex}
 \usepackage{amsmath}
+\usepackage{rotating}
 \usepackage{graphicx}
 \pagestyle{fancy}
 \fancyhf{}
